sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:3: error: value à is not a member of Int
for (i <- 1 à getNombreValeurs - 1){
            ^